--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+<title> New York Teams </title>
   <!-- JQuery -->
   <script src="./jquery.min.js"></script>
   <!-- Bootstrap 3.3.5 -->
@@ -22,7 +23,7 @@
     -->
     <header class="navbar navbar-inverse navbar-fixed-top bottom">
       <div class="container">
-          <a class="navbar-brand page-brand" id="bottom-logo" href="#top">_fill Jon Snow</a>
+          <a class="navbar-brand page-brand" id="bottom-logo" href="#top">Lamar Williams</a>
         <div id="navbar" class="">
           <ul class="nav navbar-nav navbar-right top">
             <li class=""><a href="#about" class="scroll">_fill Life Story</a></li>
@@ -130,9 +131,9 @@
           <h2 class="featurette-heading">Projects</h2>
           <p>_fill I am a self starter who proactively takes on extra projects like these:</p>
           <ul>
-            <li>_fill Knitted a sweater to keep me warm north of the wall </li>
-            <li>_fill Practicing riding Dragons </li>
-            <li>_fill Growing my beard </li>
+            <li> The New York Knicks </li>
+            <li> The New York Giants </li>
+            <li> The New York Yankess </li>
           </ul>
         </div>
       </div>
